# archon-rh

./: .gitignore  GPU_SETUP.md  GPU_TRAINING_SUMMARY.md  Makefile  QUICK_START_GPU.md  README.md  RIEMANN_HYPOTHESIS_CHECKLIST.md  START_HERE_GPU.md  launch_gpu_training.bat  launch_gpu_training.sh  pyproject.toml
.cursor/plans/: consolidate-repository-structure-beddf4df.plan.md
archon-rh/: .gitignore  Makefile  README.md
archon-rh/colab/: archon_lean.ipynb
archon-rh/conjecture/: __init__.py
archon-rh/conjecture/funsearch/: funsearch_loop.py  objective_registry.py
archon-rh/conjecture/objectives/: __init__.py  li_criterion.py
archon-rh/conjecture/tests/: test_funsearch.py
archon-rh/docker/: base.Dockerfile  lean.Dockerfile  numerics.Dockerfile  trainer.Dockerfile
archon-rh/formal/lean_project/: Mathlib.lean  lakefile.lean
archon-rh/formal/leandojo_bridge/: __init__.py  bridge.py  toy.py
archon-rh/formal/leanlib/: lakefile.lean
archon-rh/formal/leanlib/ArchonCertificates/: ZeroCount.lean
archon-rh/formal/leanlib/ArchonRiemann/: Candidates.lean  Explicit.lean  Generated.lean  NymanBeurling.lean
archon-rh/formal/tests/: test_leandojo_mathlib.py
archon-rh/infra/github-actions/: ci.yml
archon-rh/infra/k8s/: job-rl.yaml  job-sft.yaml  namespace.yaml  networkpolicy.yaml  nodepools.yaml  ray-cluster.yaml
archon-rh/infra/terraform/: main.tf  outputs.tf
archon-rh/libs/rh_common/: __init__.py
archon-rh/numerics/: __init__.py
archon-rh/numerics/arb_bindings/: interval.py
archon-rh/numerics/tests/: test_numeric_cert.py
archon-rh/numerics/tests/data/: numeric_tiny.yaml
archon-rh/numerics/zeros/: run_zero_checks.py
archon-rh/orchestration/configs/: rl_ppo_prod.yaml  rl_ppo_tiny.yaml  rl_tiny.yaml  sft_hf_prod.yaml  sft_hf_tiny.yaml  sft_tiny.yaml
archon-rh/orchestration/pipelines/: __init__.py  common.py  formalize_candidate.py  funsearch_loop.py  numerics_verify.py  rl_selfplay.py  sft_train.py
archon-rh/prover/datasets/: __init__.py  builders.py
archon-rh/prover/datasets/sample_data/: mini_mathlib.jsonl
archon-rh/prover/inference/: sample.py
archon-rh/prover/metrics/: __init__.py  metrics.py
archon-rh/prover/rl/: __init__.py  run_selfplay.py
archon-rh/prover/tests/: test_datasets.py  test_metrics.py  test_selfplay.py  test_sft_and_rl.py
archon-rh/prover/train/: __init__.py  modeling.py  sft_train.py
archon-rh/safety/audits/: sign_rewards.py
archon-rh/safety/policies/: __init__.py  allowlist.json  reward_verifier.py
archon-rh/safety/sandbox/: seccomp.json
colab/: ARCHON_RH_Complete_Setup.ipynb  GITHUB_SETUP.md  Quick_Start.ipynb  README.md  SETUP_SUMMARY.md  dataset_setup_guide.md
colab/archive/: archon_pipeline.ipynb  archon_setup.ipynb
conjecture/: __init__.py
conjecture/funsearch/: __init__.py  funsearch_loop.py
conjecture/objectives/: li_criterion.py
conjecture/tests/: test_funsearch.py
docker/: trainer.Dockerfile
docs/: COLAB.md
formal/: __init__.py
formal/leandojo_bridge/: __init__.py  bridge.py  client.py  toy.py
formal/leanlib/: lakefile.lean
formal/tests/: test_toy_lemma.py
formal/tests/data/: toy.lean
libs/rh_common/: artifacts.py  logging.py
numerics/arb_bindings/: __init__.py  interval.py
numerics/explicit_bounds/: __init__.py  bounds.py
numerics/tests/: test_numeric_cert.py
numerics/zeros/: __init__.py
orchestration/configs/: colab_rl_gpu.yaml  colab_sft_gpu.yaml  colab_sft_multigpu.yaml  funsearch_loop.yaml  gpu_production.yaml  numeric_verify.yaml  rl_ppo_colab.yaml  sft_hf_colab.yaml
orchestration/pipelines/: formalize_candidate.py  numerics_verify.py  sft_train.py
prover/: __init__.py
prover/datasets/: __init__.py  build_mathlib_dataset.py  builders.py  schemas.py
prover/inference/: __init__.py  sample.py  serve_vllm.py
prover/metrics/: metrics.py
prover/rl/: __init__.py  env_lean.py  ppo_loop.py  run_selfplay.py
prover/tests/: test_datasets.py  test_sft_trainer.py
prover/tests/data/: sample_tactics.jsonl
prover/train/: __init__.py  modeling.py  sft_hf.py  sft_train.py
safety/audits/: __init__.py  sign_rewards.py
safety/policies/: reward_verifier.py
safety/tests/: test_reward_verifier.py
scripts/: enhance_gpu_training.py
(+1 files in other folders)
