[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archon-rh"
version = "0.1.0"
description = "Offline reasoning lab for formal mathematics research on the Riemann Hypothesis."
authors = [{name = "ARCHON Team"}]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  # Core utilities
  "click>=8.1.7,<9.0",
  "numpy>=1.26,<2.1",
  "pandas>=2.1,<2.3",
  "pyarrow>=14.0,<18.0",
  "pyarrow-hotfix",
  
  # ML/DL frameworks
  "torch>=2.2.2,<2.6",
  "torchaudio>=2.2.2,<2.6",
  "torchvision>=0.17.2,<0.20",
  "accelerate>=0.31,<0.35",
  "transformers>=4.40,<4.48",
  "sentencepiece>=0.1.99,<0.3.0",
  "bitsandbytes>=0.43,<0.45; platform_system == 'Linux'",
  
  # Math/Science
  "mpmath>=1.3,<2.0",
  "sympy>=1.12,<1.14",
  "networkx>=3.2,<3.5",
  
  # Utilities
  "rich>=13.7,<14.0",
  "pydantic>=2.7,<2.10",
  "pyyaml>=6.0,<7.0",
  "tqdm>=4.66,<5.0",
  
  # Data processing
  "datasets>=2.19,<3.0",
  "huggingface-hub>=0.22,<0.26",
  
  # Testing
  "pytest>=8.2,<8.4",
  "pytest-asyncio>=0.23,<0.25",
  
  # Misc
  "tenacity>=8.2,<9.0",
  "cryptography>=42,<44",
  "shortuuid>=1.0,<2.0"
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "mypy",
  "types-PyYAML",
  "types-requests"
]

# Ray is optional (not needed for Colab, requires specific Python versions)
ray = [
  "ray[default]>=2.31.0,<2.51"
]

# Local development utilities
local = [
  "uvicorn>=0.29,<0.31",
  "fastapi>=0.111,<0.113",
  "typer>=0.12,<0.14",
  "polars>=0.20,<0.22",
  "fastparquet>=2024.2,<2025.0",
  "jsonschema>=4.21,<4.23",
  "xxhash>=3.4,<4.0",
  "orjson>=3.10,<3.12",
  "ed25519>=1.5,<1.7"
]

[tool.setuptools]
packages = {find = {include = ["libs*", "formal*", "prover*", "conjecture*", "numerics*", "orchestration*", "safety*"]}}

[tool.ruff]
select = ["E", "F", "I", "UP", "N"]
line-length = 100

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["formal/tests", "prover/tests", "conjecture/tests", "numerics/tests", "safety/tests"]
pythonpath = ["."]

[tool.mypy]
exclude = ["formal/leanlib"]
python_version = "3.10"
warn_unused_ignores = true
warn_return_any = true
